# food-daily-scraper

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  _debug_html.py  brief.md  create_commits.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.example.yaml
data/examples/: sample_restaurants.csv
data/raw/: grabfood_467fda13_8955a2955b.html  grabfood_6c329689_8955a2955b.html  grabfood_6dcea02d_8955a2955b.html  grabfood_cc62a5b8_8955a2955b.html  grabfood_d6ca229e_8955a2955b.html
scraper/: __main__.py  cli.py  config.py  exceptions.py  models.py
scraper/core/: base_scraper.py  factory.py
scraper/exporters/: exporters.py
scraper/storage/: sqlite_storage.py
scraper/utils/: logger.py  proxy_manager.py  stealth.py
tests/: conftest.py
tests/fixtures/: grabfood_api_response.json  shopeefood_api_response.json
tests/integration/: test_grabfood_integration.py  test_storage.py
tests/unit/: test_exporters.py  test_models.py  test_proxy_manager.py
