[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "food-delivery-scraper"
version = "1.0.0"
description = "Production-ready scraping framework for GrabFood, ShopeeFood, and GoFood"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your-email@example.com" }]
requires-python = ">=3.11"
keywords = ["scraping", "grabfood", "shopeefood", "gofood", "food-delivery", "indonesia"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Spider",
]
dependencies = [
    "playwright>=1.42.0",
    "tenacity>=8.2.3",
    "pydantic>=2.6.4",
    "pydantic-settings>=2.2.1",
    "typer[all]>=0.12.3",
    "rich>=13.7.1",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
    "openpyxl>=3.1.2",
]

[project.scripts]
food-scraper = "scraper.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.isort]
known-first-party = ["scraper"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["scraper"]
omit = ["scraper/cli.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]
